--- a/src/style/all.scss
+++ b/src/style/all.scss
@@ -4,8 +4,8 @@
 // 2. Include any default variable overrides here
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
-@import "../scss/utils/variables";
-@import "../scss/utils/variables-dark";
+@import "./utils/variables";
+@import "./utils/variables-dark";
 
 // 4. Include any default map overrides here
 
@@ -15,8 +15,8 @@
 @import "bootstrap/scss/root";
 
 // 6. Optionally include any other parts as needed
-@import "../scss/utils/utilities";
-@import "../scss/base/reboot";
+@import "./utils/utilities";
+@import "./base/reboot";
 // @import "bootstrap/scss/type";
 // @import "bootstrap/scss/images";
 // @import "bootstrap/scss/containers";
@@ -29,11 +29,11 @@
 // 8. Add additional custom code here
 
 @import "bootstrap/scss/bootstrap";
-@import "../scss/base/base";
-@import "../scss/base/font";
-@import "../scss/utils/helpers";
-@import "../scss/base/font";
-@import "../scss/components/swiper";
-@import "../scss/components/calender";
-@import "../scss/components/course-card";
-@import "../scss/components/banner";
+@import "./base/base";
+@import "./base/font";
+@import "./utils/helpers";
+@import "./base/font";
+@import "./components/swiper";
+@import "./components/calender";
+@import "./components/course-card";
+@import "./components/banner";
